src/ProGPU.Native/include/progpu_native.h

typedef struct progpu_native_engine progpu_native_engine;
typedef enum progpu_native_status {
    PROGPU_NATIVE_STATUS_SUCCESS = 0,
    PROGPU_NATIVE_STATUS_INVALID_ARGUMENT = 1,
    PROGPU_NATIVE_STATUS_UNSUPPORTED = 2,
    PROGPU_NATIVE_STATUS_OUT_OF_MEMORY = 3,
    PROGPU_NATIVE_STATUS_WRONG_THREAD = 4,
    PROGPU_NATIVE_STATUS_DEVICE_LOST = 5,
    PROGPU_NATIVE_STATUS_INTERNAL_ERROR = 6
} progpu_native_status;
typedef struct progpu_native_layer_metrics {
    uint32_t struct_size;
    uint32_t texture_width;
    uint32_t texture_height;
    uint32_t texture_generation;
    uint32_t allocation_count;
    uint32_t content_pass_count;
    uint32_t composite_pass_count;
    uint32_t cache_hit;
    uint64_t texture_bytes;
    uint64_t vertex_upload_bytes;
    uint64_t uniform_upload_bytes;
} progpu_native_layer_metrics;
typedef struct progpu_native_image_frame {
    uint32_t struct_size;
    uint32_t width;
    uint32_t height;
    float dpi_scale;
    uintptr_t target_view;
    progpu_native_color clear_color;
    const uint8_t* rgba_pixels;
    size_t pixel_bytes;
    uint32_t image_width;
    uint32_t image_height;
    uint32_t row_bytes;
    uint32_t sampling;
    uint32_t image_revision;
    uint32_t content_revision;
    progpu_native_image_rect source_rect;
    progpu_native_image_rect destination_rect;
    progpu_native_affine_2d transform;
    float opacity;
    uint32_t reserved;
    /*
     * When PROGPU_NATIVE_IMAGE_SOURCE_EXTERNAL_VIEW is set, this is a
     * borrowed same-device WGPUTextureView. The engine retains the view until
     * it is replaced or destroyed. The caller must keep the underlying
     * texture alive and not destroy it during that interval.
     */
    uintptr_t external_source_view;
    uint32_t source_flags;
    uint32_t reserved2;
    /*
     * Optional borrowed same-device filterable mask view. Its red channel is
     * sampled over mask_destination_rect and multiplies source alpha. The
     * engine retains the view under the same lifetime rule as the source.
     */
    uintptr_t external_mask_view;
    uint32_t mask_width;
    uint32_t mask_height;
    progpu_native_image_rect mask_destination_rect;
    uint32_t mask_revision;
    uint32_t mask_sampling;
    const progpu_native_draw_state* draw_state;
} progpu_native_image_frame;
typedef struct progpu_native_image_frame_metrics {
    uint32_t struct_size;
    uint32_t draw_call_count;
    uint32_t vertex_count;
    uint32_t index_count;
    uint32_t texture_generation;
    uint32_t reserved;
    uint64_t vertex_upload_bytes;
    uint64_t index_upload_bytes;
    uint64_t texture_upload_bytes;
    uint64_t uniform_upload_bytes;
    uint64_t submission_count;
    uint64_t payload_hash;
} progpu_native_image_frame_metrics;
PROGPU_NATIVE_API progpu_native_status progpu_native_engine_render_image(
    progpu_native_engine* engine,
    const progpu_native_image_frame* frame,
    progpu_native_image_frame_metrics* metrics);
/*
 * Returns the backend submission index of the most recently submitted frame.
 * The zero value means that this engine has not submitted work yet.
 */
PROGPU_NATIVE_API progpu_native_status progpu_native_engine_get_last_submission(
    progpu_native_engine* engine,
    uint64_t* submission_index);
PROGPU_NATIVE_API progpu_native_status progpu_native_engine_get_layer_metrics(
    progpu_native_engine* engine,
    progpu_native_layer_metrics* metrics);
/*
 * Polls or waits for one submission from this engine. This is the consumer
 * fence used by external-image owners before recycling a borrowed texture.
 * Calls are owner-thread affine and perform no allocation.
 */
PROGPU_NATIVE_API progpu_native_status progpu_native_engine_poll_submission(
    progpu_native_engine* engine,
    uint64_t submission_index,
    uint8_t wait,
    uint8_t* complete);
PROGPU_NATIVE_API size_t progpu_native_engine_get_last_error(
    const progpu_native_engine* engine,
    char* destination,
    size_t destination_size);