src/ProGPU.Backend.Native/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "progpu_native_engine_render_image")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeRendererStatus RenderImage(
        nint engine,
        ImageFrame* frame,
        ImageFrameMetrics* metrics);

    [LibraryImport(LibraryName, EntryPoint = "progpu_native_engine_get_last_submission")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeRendererStatus GetLastSubmission(
        nint engine,
        ulong* submissionIndex);

    [LibraryImport(LibraryName, EntryPoint = "progpu_native_engine_get_layer_metrics")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeRendererStatus GetLayerMetrics(
        nint engine,
        LayerMetrics* metrics);

    [LibraryImport(LibraryName, EntryPoint = "progpu_native_engine_poll_submission")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeRendererStatus PollSubmission(
        nint engine,
        ulong submissionIndex,
        byte wait,
        byte* complete);

    [LibraryImport(LibraryName, EntryPoint = "progpu_native_engine_get_last_error")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nuint GetLastError(
        nint engine,
        byte* destination,
        nuint destinationSize);
}
